Cherry-pick conflicts

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -93,6 +93,9 @@ html.dark-mode {
 .display-none {
   display: none !important;
 }
+.desktop-display-none {
+  display: none;
+}
 .mobile-hidden {
   visibility: hidden;
 }
