--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -96,16 +96,6 @@ html.dark-mode {
 .desktop-display-none {
   display: none;
 }
-.mobile-hidden {
-  visibility: hidden;
-}
-.mobile-display-none {
-  display: none !important;
-}
-.mobile-disabled {
-  opacity: 0.3;
-  pointer-events: none;
-}
 .hover:hover {
   cursor: pointer;
 }
@@ -140,6 +130,25 @@ html.dark-mode {
 }
 .val-changed button {
   background-color: var(--color-changed);
+}
+@media only screen and (max-width: 768px) {
+  html {
+    overflow: scroll;
+  }
+  body {
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+  .mobile-hidden {
+    visibility: hidden;
+  }
+  .mobile-display-none {
+    display: none !important;
+  }
+  .mobile-disabled {
+    opacity: 0.3;
+    pointer-events: none;
+  }
 }
 
 /* public/css/base/_button.css */
