--- a/public/views/_test.html
+++ b/public/views/_test.html
@@ -166,15 +166,11 @@
             height: 50px;
             width: 100%;
             display: flex;
-            background-color: #003D57;
         }
 
         #ctrl-tabs>div {
             flex-grow: 1;
-            mask-size: 3em;
-            -webkit-mask-size: 3em;
-            mask-position: center;
-            -webkit-mask-position: center;
+            font-size: 2em;
         }
 
         #ctrl-tabs>.active {
