--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -16,6 +16,8 @@
 
     <script
       src="https://cdn.jsdelivr.net/npm/ol@v10.3.1/dist/ol.js"
+      integrity="sha384-GtOM9G1JWFKmDbfOLBrez9YebIrX1pqVVtYukhqrKOtyneLNxnTIFMe8ER850GT/"
+      crossOrigin="anonymous"
       defer
     ></script>
 
