--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -2166,9 +2166,9 @@ html.dark-mode {
   height: 100%;
   overflow: hidden;
   position: relative;
-  background-color: white;
+  background-color: var(--color-light);
   display: grid;
-  grid-template-rows: 50px auto;
+  grid-template-rows: 3em auto;
   &.disabled::after {
     content: "";
     height: 100%;
@@ -2176,21 +2176,23 @@ html.dark-mode {
     position: absolute;
     left: 0;
     top: 0;
-    background-color: #fff;
+    background-color: var(--color-light);
     opacity: 0.7;
   }
   & > .tabs {
     width: 100%;
-    height: 50px;
+    height: inherit;
     overflow-x: auto;
     display: flex;
     background-color: var(--color-light-secondary);
     & > .tab > .header {
+      min-width: 8em;
       height: 100%;
       display: flex;
       align-items: center;
       white-space: nowrap;
-      border-right: 1px solid var(--color-primary-light);
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+      border-radius: 3px 1em 0 0;
       padding: 10px;
       -webkit-user-select: none;
       -moz-user-select: none;
@@ -2198,7 +2200,7 @@ html.dark-mode {
       user-select: none;
     }
     & > .tab.active > .header {
-      background-color: white;
+      background-color: var(--color-light);
       font-weight: bold;
     }
     & > .tab:not(.active) > .header:hover {
