close button now a class with immediate content and styling.

--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -26,6 +26,11 @@
   &.primary-light-colour {
     color: var(--color-primary-light);
   }
+
+  &.close:after {
+    content: 'close';
+    color: var(--color-primary-light);
+  }
 }
 
 .active > .material-symbols-outlined {
