--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1108,6 +1108,10 @@ html.dark-mode {
   &.primary-light-colour {
     color: var(--color-primary-light);
   }
+  &.close:after {
+    content: "close";
+    color: var(--color-primary-light);
+  }
 }
 .active > .material-symbols-outlined {
   color: var(--color-on);
