--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1464,7 +1464,7 @@ html.dark-mode {
   width: 100%;
   overflow: visible;
   position: relative;
-  background-color: white;
+  background-color: var(--color-light);
   box-shadow: var(--color-mid) 0px 8px 24px;
   &:disabled {
     pointer-events: none;
@@ -1480,11 +1480,14 @@ html.dark-mode {
       white-space: nowrap;
       text-overflow: ellipsis;
     }
-    & > .icon {
+    > .material-symbols-outlined {
       pointer-events: none;
       margin-left: auto;
       width: 1.5em;
-      content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">%0A<path d="M7 10l5 5 5-5z"/>%0A</svg>');
+      &:after {
+        color: var(--color-primary);
+        content: "arrow_drop_down";
+      }
     }
   }
   & > ul {
@@ -1497,7 +1500,7 @@ html.dark-mode {
     box-shadow: 1px 1px 3px var(--color-primary-light);
     margin-top: -1px;
     text-align: left;
-    background-color: white;
+    background-color: var(--color-light);
     z-index: 997;
     & > li {
       padding: 5px;
@@ -1519,10 +1522,12 @@ html.dark-mode {
       background-color: var(--color-primary);
     }
   }
-  &.active > ul {
-    display: block;
-    & > .head > .icon {
-      content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">%0A<path d="M7 14l5-5 5 5z"/>%0A</svg>');
+  &.active {
+    & > ul {
+      display: block;
+    }
+    & > .head > .material-symbols-outlined:after {
+      content: "arrow_drop_up";
     }
   }
   &.dropdown-reverse > ul {
@@ -1532,7 +1537,7 @@ html.dark-mode {
 @media print {
   .dropdown {
     box-shadow: none;
-    & > .head > .icon {
+    & > .head > .material-symbols-outlined {
       display: none;
     }
   }
@@ -1543,14 +1548,19 @@ html.dark-mode {
     &.active .head {
       background: var(--dm-color-on);
     }
-    ul .label {
-      background-color: var(--dm-color-dark-faded);
+    ul {
+      &.label {
+        background-color: var(--dm-color-dark-faded);
+      }
     }
     ul > li,
     .head {
       background: var(--dm-color-medium);
       color: var(--dm-color-light);
       border-color: var(--dm-color-dark-faded);
+      > .material-symbols-outlined:after {
+        color: var(--color-light);
+      }
     }
     ul > li {
       &:hover {
