--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1465,7 +1465,7 @@ html.dark-mode {
       margin-left: auto;
       width: 1.5em;
       &:after {
-        color: var(--color-primary);
+        color: var(--color-off-black);
         content: "arrow_drop_down";
       }
     }
