--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -35,7 +35,7 @@
   color: var(--color-off-black);
 }
 .off-black-background {
-  color: white;
+  color: var(--color-light);
   background-color: var(--color-off-black);
 }
 .on-colour {
