--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -32,7 +32,7 @@
   color: var(--color-off-black);
 }
 .off-black-background {
-  color: white;
+  color: var(--color-light);
   background-color: var(--color-off-black);
 }
 .on-colour {
