--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -11,6 +11,19 @@
   --color-on: #e18335;
   --color-no: #a21309;
   --color-changed: #ffffa7;
+  --dm-color-on: #e18335;
+  --dm-color-medium: #555555;
+  --dm-color-dark-faded: #333333;
+  --dm-color-dark-neutral: #222222;
+  --dm-color-dark: #111111;
+  --dm-color-darker: #151515;
+  --dm-color-light: #ffffff;
+  --dm-color-light-secondary: #f2f2f2;
+  --dm-color-light-darker: #d8d8d8;
+}
+* {
+  transition: 0.2s ease-in-out;
+  transition-property: background-color;
 }
 .primary-colour {
   color: var(--color-primary);
@@ -40,6 +53,34 @@
 }
 .no-colour {
   color: var(--color-no);
+}
+html.dark-mode {
+  .primary-colour {
+    color: var(--dm-color-on);
+    &.active {
+      color: var(--dm-color-light);
+    }
+  }
+  .bg-light-tertiary {
+    background-color: var(--dm-color-dark-faded);
+  }
+  .input-range.single {
+    &::after,
+    &::before {
+      background:
+        linear-gradient(
+          0deg,
+          transparent 0 45%,
+          #fff 45% 55%,
+          transparent 55% 100%);
+    }
+  }
+  #ctrl-panel {
+    background-color: var(--dm-color-dark-neutral);
+  }
+  #ctrl-tabs {
+    background-color: var(--dm-color-darker);
+  }
 }
 
 /* public/css/layout/_ol.css */
