Dark mode moved into one stylesheet;

--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -1,5 +1,7 @@
 @import url('./base/_colours.css');
 
+@import url('./base/_dark_mode.css');
+
 @import url('./base/_common.css');
 
 @import url('./base/_button.css');
