--- a/public/css/layout/_ol.css
+++ b/public/css/layout/_ol.css
@@ -4,9 +4,9 @@
 }
 
 .ol-scale-line-inner {
-  border: 2px solid #222;
+  border: 2px solid var(--color-off-black);
   border-top: none;
-  color: #222;
+  color: var(--color-off-black);
   text-align: center;
   margin: 1px;
   will-change: contents, width;
@@ -42,7 +42,7 @@
     display: block;
     margin: 1px;
     padding: 0;
-    color: #fff;
+    color: var(--color-light);
     font-weight: 700;
     text-decoration: none;
     font-size: inherit;
