--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -57,7 +57,21 @@
 .no-colour {
   color: var(--color-no);
 }
+
+/* public/css/base/_dark_mode.css */
 html.dark-mode {
+  button {
+    color: var(--dm-color-light);
+    &.primary-colour {
+      color: var(--dm-color-light);
+    }
+    &.active {
+      color: var(--dm-color-on);
+    }
+    & > .primary-colour {
+      color: var(--dm-color-light);
+    }
+  }
   .primary-colour {
     color: var(--dm-color-on);
     &.active {
@@ -74,7 +88,7 @@ html.dark-mode {
         linear-gradient(
           0deg,
           transparent 0 45%,
-          #fff 45% 55%,
+          var(--color-light) 45% 55%,
           transparent 55% 100%);
     }
   }
@@ -83,6 +97,180 @@ html.dark-mode {
   }
   #ctrl-tabs {
     background-color: var(--dm-color-darker);
+  }
+  a {
+    color: var(--dm-color-on);
+  }
+  input[type=number],
+  input[type=text],
+  input[type=search] {
+    background: var(--dm-color-medium);
+    color: var(--dm-color-light);
+    border-color: var(--dm-color-dark-faded);
+  }
+  input[type=search] {
+    &::placeholder {
+      color: var(--dm-color-light-darker);
+      opacity: 1;
+    }
+    &::-ms-input-placeholder {
+      color: var(--dm-color-light-darker);
+    }
+  }
+  textarea {
+    background-color: var(--dm-color-light-darker);
+    color: var(--dm-color-light);
+  }
+  .active > .material-symbols-outlined {
+    color: var(--dm-color-on);
+  }
+  .material-symbols-outlined {
+    color: var(--dm-color-light-secondary);
+    &.active {
+      color: var(--dm-color-on);
+    }
+  }
+  dialog {
+    color: var(--dm-color-light);
+    background-color: var(--dm-color-dark-faded);
+  }
+  .drawer {
+    background-color: var(--dm-color-dark-faded);
+    color: var(--color-light-secondary);
+    border: none;
+    &.top-btn {
+      color: var(--color-light-secondary);
+    }
+    &.panel {
+      background-color: var(--dm-dark-neutral);
+    }
+  }
+  .dropdown {
+    box-shadow: 0px 0px 0px 0px;
+    &.active .head {
+      background: var(--dm-color-on);
+    }
+    ul {
+      &.label {
+        background-color: var(--dm-color-dark-faded);
+      }
+    }
+    ul > li,
+    .head {
+      background: var(--dm-color-medium);
+      color: var(--dm-color-light);
+      border-color: var(--dm-color-dark-faded);
+      > .material-symbols-outlined:after {
+        color: var(--color-light);
+      }
+    }
+    ul > li {
+      &:hover {
+        background: var(--dm-color-dark-faded);
+      }
+      &.selected {
+        background-color: var(--dm-color-dark-faded);
+      }
+    }
+  }
+  .key {
+    button.layer-key {
+      &.active {
+        background-color: var(--dm-color-on);
+        color: var(--dm-color-darker);
+      }
+    }
+  }
+  .searchbox {
+    box-shadow: unset;
+  }
+  #ctrls-divider,
+  #tabview-divider {
+    background-color: var(--dm-color-dark-faded);
+  }
+  #layers {
+    .drawer.layer-view .drawer {
+      background-color: var(--dm-color-dark-neutral);
+    }
+    & > .drawer.layer-group .drawer.layer-view {
+      background-color: var(--dm-color-dark-faded);
+      border-top: 1px solid var(--dm-color-medium);
+    }
+  }
+  .location-view-grid {
+    .layer-key > span {
+      background-color: var(--dm-color-on);
+    }
+    .location canvas {
+      filter: invert(1);
+    }
+  }
+  #mapButton {
+    background-color: var(--dm-color-darker);
+  }
+  ::-webkit-scrollbar-track {
+    background: var(--dm-color-dark-faded);
+  }
+  ::-webkit-scrollbar-thumb {
+    background: var(--dm-color-color-on);
+  }
+  ::-webkit-scrollbar-corner {
+    background: var(--dm-color-dark-faded);
+  }
+  .tabview {
+    .panel {
+      background-color: var(--dm-color-dark-neutral);
+      .btn-row {
+        background-color: var(--dm-color-dark-neutral);
+        button {
+          color: var(--dm-color-on);
+          background: var(--dm-color-dark-faded);
+        }
+      }
+      & > .flex-col {
+        background-color: var(--dm-color-dark-faded);
+      }
+    }
+    .tabs,
+    .tabulator-tableholder {
+      background: var(--dm-color-darker);
+    }
+    .tab {
+      .header {
+        color: var(--dm-color-light);
+        background-color: var(--dm-color-dark-faded);
+      }
+      &.active .header {
+        background-color: var(--dm-color-on);
+      }
+    }
+    .tabulator {
+      .tabulator-footer {
+        background: var(--dm-color-dark);
+        .tabulator-page {
+          color: var(--dm-color-light);
+          &.active {
+            color: var(--dm-color-on);
+          }
+        }
+      }
+    }
+    .tabulator-header {
+      background: var(--dm-color-dark);
+    }
+    .tabulator-col {
+      background-color: var(--dm-color-dark-faded);
+      color: var(--dm-color-light);
+    }
+    .tabulator-row {
+      color: var(--dm-color-light);
+      &.tabulator-row-odd {
+        background-color: var(--dm-color-dark-neutral);
+      }
+      &.tabulator-row-even {
+        background-color: var(--dm-color-medium);
+      }
+    }
   }
 }
 
@@ -195,20 +383,6 @@ button {
     color: var(--color-on);
   }
 }
-html.dark-mode {
-  button {
-    color: var(--dm-color-light);
-    &.primary-colour {
-      color: var(--dm-color-light);
-    }
-    &.active {
-      color: var(--dm-color-on);
-    }
-    & > .primary-colour {
-      color: var(--dm-color-light);
-    }
-  }
-}
 
 /* public/css/base/_globals.css */
 body {
@@ -252,11 +426,6 @@ h3 {
 }
 a > img {
   height: 100%;
-}
-html.dark-mode {
-  a {
-    color: var(--dm-color-on);
-  }
 }
 
 /* public/css/base/_icons.css */
@@ -1060,28 +1229,6 @@ input[type=search]::-webkit-search-decoration:hover,
 input[type=search]::-webkit-search-cancel-button:hover {
   cursor: pointer;
 }
-html.dark-mode {
-  input[type=number],
-  input[type=text],
-  input[type=search] {
-    background: var(--dm-color-medium);
-    color: var(--dm-color-light);
-    border-color: var(--dm-color-dark-faded);
-  }
-  input[type=search] {
-    &::placeholder {
-      color: var(--dm-color-light-darker);
-      opacity: 1;
-    }
-    &::-ms-input-placeholder {
-      color: var(--dm-color-light-darker);
-    }
-  }
-  textarea {
-    background-color: var(--dm-color-light-darker);
-    color: var(--dm-color-light);
-  }
-}
 
 /* public/css/base/_material_icons.css */
 .material-symbols-outlined {
@@ -1112,17 +1259,6 @@ html.dark-mode {
 }
 .active > .material-symbols-outlined {
   color: var(--color-on);
-}
-html.dark-mode {
-  .active > .material-symbols-outlined {
-    color: var(--dm-color-on);
-  }
-  .material-symbols-outlined {
-    color: var(--dm-color-light-secondary);
-    &.active {
-      color: var(--dm-color-on);
-    }
-  }
 }
 
 /* public/css/elements/_alert_confirm.css */
@@ -1357,12 +1493,6 @@ dialog {
     }
   }
 }
-html.dark-mode {
-  dialog {
-    color: var(--dm-color-light);
-    background-color: var(--dm-color-dark-faded);
-  }
-}
 
 /* public/css/elements/_drawer.css */
 .disabled > .drawer {
@@ -1439,19 +1569,6 @@ html.dark-mode {
   p {
     padding-left: 0.3em;
     padding-right: 0.3em;
-  }
-}
-html.dark-mode {
-  .drawer {
-    background-color: var(--dm-color-dark-faded);
-    color: var(--color-light-secondary);
-    border: none;
-    &.top-btn {
-      color: var(--color-light-secondary);
-    }
-    &.panel {
-      background-color: var(--dm-dark-neutral);
-    }
   }
 }
 
@@ -1538,36 +1655,6 @@ html.dark-mode {
     }
   }
 }
-html.dark-mode {
-  .dropdown {
-    box-shadow: 0px 0px 0px 0px;
-    &.active .head {
-      background: var(--dm-color-on);
-    }
-    ul {
-      &.label {
-        background-color: var(--dm-color-dark-faded);
-      }
-    }
-    ul > li,
-    .head {
-      background: var(--dm-color-medium);
-      color: var(--dm-color-light);
-      border-color: var(--dm-color-dark-faded);
-      > .material-symbols-outlined:after {
-        color: var(--color-light);
-      }
-    }
-    ul > li {
-      &:hover {
-        background: var(--dm-color-dark-faded);
-      }
-      &.selected {
-        background-color: var(--dm-color-dark-faded);
-      }
-    }
-  }
-}
 
 /* public/css/elements/_key.css */
 .key {
@@ -1575,16 +1662,6 @@ html.dark-mode {
     &.active {
       background-color: var(--color-primary);
       color: var(--color-light);
-    }
-  }
-}
-html.dark-mode {
-  .key {
-    button.layer-key {
-      &.active {
-        background-color: var(--dm-color-on);
-        color: var(--dm-color-darker);
-      }
     }
   }
 }
@@ -1652,11 +1729,6 @@ html.dark-mode {
 @media print {
   .searchbox {
     box-shadow: none;
-  }
-}
-html.dark-mode {
-  .searchbox {
-    box-shadow: unset;
   }
 }
 
@@ -1804,12 +1876,6 @@ html.dark-mode {
     cursor: row-resize;
   }
 }
-html.dark-mode {
-  #ctrls-divider,
-  #tabview-divider {
-    background-color: var(--dm-color-dark-faded);
-  }
-}
 @media only screen and (max-width: 768px) {
   #ctrls-divider {
     display: none;
@@ -1873,17 +1939,6 @@ html.dark-mode {
 #layers > .layer-view > .drawer {
   background: var(--color-light);
 }
-html.dark-mode {
-  #layers {
-    .drawer.layer-view .drawer {
-      background-color: var(--dm-color-dark-neutral);
-    }
-    & > .drawer.layer-group .drawer.layer-view {
-      background-color: var(--dm-color-dark-faded);
-      border-top: 1px solid var(--dm-color-medium);
-    }
-  }
-}
 
 /* public/css/layout/_legacy.css */
 a.mask-icon,
@@ -1917,7 +1972,7 @@ button {
     mask-image: url('data:image/svg+xml,<svg%0A  xmlns="http://www.w3.org/2000/svg"%0A  width="12"%0A  height="16"%0A  viewBox="0 0 12 16">%0A  <path d="M 1.41,11.536062 6,6.9560619 10.59,11.536062 12,10.126062 6,4.1260619 0,10.126062 Z"/>%0A</svg>');
   }
 }
-html.dark-mode {
+.dark-mode {
   .mask-icon {
     background: var(--color-light-secondary);
     &:hover {
@@ -2093,11 +2148,6 @@ html.dark-mode {
     background-color: var(--dm-color-light);
     opacity: 0.8;
   }
-  html.dark-mode {
-    #mapButton {
-      background-color: var(--dm-color-darker);
-    }
-  }
 }
 @media only screen and (max-width: 768px) {
   #mapButton {
@@ -2142,17 +2192,6 @@ html.dark-mode {
 }
 ::-webkit-scrollbar-corner {
   background: var(--color-light-secondary);
-}
-html.dark-mode {
-  ::-webkit-scrollbar-track {
-    background: var(--dm-color-dark-faded);
-  }
-  ::-webkit-scrollbar-thumb {
-    background: var(--dm-color-color-on);
-  }
-  ::-webkit-scrollbar-corner {
-    background: var(--dm-color-dark-faded);
-  }
 }
 
 /* public/css/layout/_tabview.css */
@@ -2220,63 +2259,6 @@ html.dark-mode {
   }
   & .dropdown > ul {
     position: fixed;
-  }
-}
-html.dark-mode {
-  .tabview {
-    .panel {
-      background-color: var(--dm-color-dark-neutral);
-      .btn-row {
-        background-color: var(--dm-color-dark-neutral);
-        button {
-          color: var(--dm-color-on);
-          background: var(--dm-color-dark-faded);
-        }
-      }
-      & > .flex-col {
-        background-color: var(--dm-color-dark-faded);
-      }
-    }
-    .tabs,
-    .tabulator-tableholder {
-      background: var(--dm-color-darker);
-    }
-    .tab {
-      .header {
-        color: var(--dm-color-light);
-        background-color: var(--dm-color-dark-faded);
-      }
-      &.active .header {
-        background-color: var(--dm-color-on);
-      }
-    }
-    .tabulator {
-      .tabulator-footer {
-        background: var(--dm-color-dark);
-        .tabulator-page {
-          color: var(--dm-color-light);
-          &.active {
-            color: var(--dm-color-on);
-          }
-        }
-      }
-    }
-    .tabulator-header {
-      background: var(--dm-color-dark);
-    }
-    .tabulator-col {
-      background-color: var(--dm-color-dark-faded);
-      color: var(--dm-color-light);
-    }
-    .tabulator-row {
-      color: var(--dm-color-light);
-      &.tabulator-row-odd {
-        background-color: var(--dm-color-dark-neutral);
-      }
-      &.tabulator-row-even {
-        background-color: var(--dm-color-medium);
-      }
-    }
   }
 }
 
