--- a/public/views/_test.html
+++ b/public/views/_test.html
@@ -49,356 +49,171 @@
         height: 100%;
         width: 100%;
       }
-
+  
       #Map {
         position: relative;
       }
-
+  
       #Map .ol-scale-line {
         right: 5px;
         top: 5px;
         position: fixed;
       }
-
-      .map-attribution > .logo {
-        pointer-events: auto;
-        height: 1em;
-      }
-
-      #mapButton {
-        pointer-events: none;
-      }
-
-      #mapButton > * {
-        pointer-events: auto;
-      }
-
-      #mapButton .mask-icon.lock-open {
-        background-color: #afb42b;
-      }
-
-      #mapButton .mask-icon.logout {
-        background-color: #b71c1c;
-      }
-
+  
       #ctrls {
         z-index: 9999;
       }
-
+  
       #ctrl-tabs {
-        height: 50px;
+        height: auto;
+        padding: 0.5em;
         width: 100%;
         display: flex;
-        background-color: #003d57;
       }
-
-      #ctrl-tabs > div {
+  
+      #ctrl-tabs>div {
         flex-grow: 1;
-        mask-size: 3em;
-        -webkit-mask-size: 3em;
-        mask-position: center;
-        -webkit-mask-position: center;
+        font-size: 2em;
       }
-
-      #ctrl-tabs > .active {
-        background-color: #e18335;
-      }
-
-      #ctrl-tabs > .locations.mask-icon {
-        -webkit-mask-image: url('{{dir}}/public/icons/icon-search.svg');
-        mask-image: url('{{dir}}/public/icons/icon-search.svg');
-      }
-
-      #ctrl-tabs > .locations.mask-icon.active {
-        -webkit-mask-image: url('{{dir}}/public/icons/icon-location.svg');
-        mask-image: url('{{dir}}/public/icons/icon-location.svg');
-      }
-
+  
       #ctrl-panel {
         height: calc(100% - 50px);
         overflow-y: auto;
       }
-
-      #ctrl-panel > div {
+  
+      #ctrl-panel>div {
         display: none;
         padding: 10px;
       }
-
-      #ctrl-panel > div.active {
+  
+      #ctrl-panel>div.active {
         display: block;
       }
-
+  
       .bg-icon.mapp {
-        background-image: url('https://geolytix.github.io/public/mapp_v4/emblem.svg');
+        background-image: url("https://geolytix.github.io/public/mapp_v4/emblem.svg");
       }
-
+  
       @media only screen and (min-width: 768px) {
+  
         body {
           display: grid;
           grid-template-columns: 350px 10px auto;
         }
-
+  
         body.fullscreen {
           grid-template-columns: 0 0 auto !important;
         }
-
+  
         body.fullscreen #ctrls {
           display: none;
         }
-
+  
         #Map {
           grid-row: 1;
           grid-column: 3;
           position: relative;
         }
-
+  
         #OL {
           width: 100%;
           height: 100vh;
           position: absolute;
         }
-
-        #ctrls {
-            z-index: 9999;
+  
+        .map-attribution {
+          padding-left: 4em;
         }
-
-        #ctrl-tabs {
-            height: 50px;
-            width: 100%;
-            display: flex;
-        }
-
-        #ctrl-tabs>div {
-            flex-grow: 1;
-            font-size: 2em;
-        }
-
+  
+        
+  
         #ctrl-panel {
           transform: rotateY(180deg);
         }
-
-        #ctrl-panel > div {
+  
+        #ctrl-panel>div {
           transform: rotateY(180deg);
         }
-
+  
         #ctrls {
           grid-row: 1/4;
           grid-column: 1;
           height: 100%;
           overflow: hidden;
         }
-
+  
         #Tabview {
           grid-row: 3;
           grid-column: 3;
         }
-
-        @media only screen and (min-width: 768px) {
-
-            body {
-                display: grid;
-                grid-template-columns: 350px 10px auto;
-            }
-
-            body.fullscreen {
-                grid-template-columns: 0 0 auto !important;
-            }
-
-            body.fullscreen #ctrls {
-                display: none;
-            }
-
-            #Map {
-                grid-row: 1;
-                grid-column: 3;
-                position: relative;
-            }
-
-            #OL {
-                width: 100%;
-                height: 100vh;
-                position: absolute;
-            }
-
-            .map-attribution {
-                padding-left: 4em;
-            }
-
-            #ctrl-panel {
-                transform: rotateY(180deg);
-            }
-
-            #ctrl-panel>div {
-                transform: rotateY(180deg);
-            }
-
-            #ctrls {
-                grid-row: 1/4;
-                grid-column: 1;
-                height: 100%;
-                overflow: hidden;
-            }
-
-            #Tabview {
-                grid-row: 3;
-                grid-column: 3;
-            }
-        }
-
-        @media only screen and (max-width: 768px) {
-
-            html {
-                overflow: scroll;
-            }
-
-            body {
-                overflow-y: scroll;
-                overflow-x: hidden;
-            }
-
-            #Map {
-                height: calc(100% - 50px);
-                width: 100%;
-            }
-
-            #OL {
-                width: 100%;
-                height: 100%;
-            }
-
-
-            #ctrls {
-                width: 100%;
-                height: 100%;
-                position: relative;
-            }
-
-        }
-
-        #tabview-divider {
-          position: relative;
-          grid-row: 2;
-          grid-column: 3;
-          background-image: url('{{dir}}/public/icons/pill-horizontal.svg');
-          background-repeat: no-repeat;
-          background-position: center;
-          background-color: white;
-          box-shadow: 0px -1px 6px -3px #777;
-        }
-
-        #tabview-divider:hover {
-          cursor: row-resize;
-        }
-
-        .desktop-display-none {
-          display: none;
-        }
+  
       }
-
+  
       @media only screen and (max-width: 768px) {
+  
         html {
           overflow: scroll;
         }
-
+  
         body {
           overflow-y: scroll;
           overflow-x: hidden;
         }
-
+  
         #Map {
           height: calc(100% - 50px);
           width: 100%;
         }
-
+  
         #OL {
           width: 100%;
           height: 100%;
         }
-
-        #mapButton {
-          position: fixed;
-          top: 0;
-          left: 0;
-          height: 100%;
-        }
-
-        #mapButton > button,
-        #mapButton > a {
-          margin-bottom: 10px;
-          background-color: white;
-          box-shadow: 1px 1px 3px #777;
-          border-radius: 50%;
-          opacity: 0.9;
-          padding: 5px;
-          width: 3em;
-          height: 3em;
-        }
-
+  
         #ctrls {
           width: 100%;
           height: 100%;
           position: relative;
         }
-
-        #ctrls-divider {
-          display: none;
-        }
-
-        .mobile-hidden {
-          visibility: hidden;
-        }
-
-        .mobile-display-none {
-          display: none;
-        }
-
-        .mobile-disabled {
-          opacity: 0.3;
-          pointer-events: none;
-        }
+  
       }
     </style>
   </head>
 
   <body style="grid-template-rows: auto 0 0">
-    <div id="Map">
+    <div id="Map"></div>
+  
       <div id="OL"></div>
+  
     </div>
-
+  
     <div id="mapButton" class="btn-column"></div>
-
+  
     <div id="tabview-divider"></div>
-
-    <div
-      id="Tabview"
-      class="tabview mobile-display-none desktop-display-none"
-    ></div>
-
+  
+    <div id="Tabview" class="tabview mobile-display-none desktop-display-none"></div>
+  
     <div id="ctrls-divider"></div>
-
+  
     <div id="ctrls" class="lighter-background">
+  
       <div id="ctrl-tabs" class="hover">
-        <div data-id="layers" class="mask-icon layers active"></div>
-        <div data-id="locations" class="mask-icon locations"></div>
-      </div>
-
-        <div id="ctrl-tabs" class="hover">
-            <div data-id="layers" class="active material-symbols-outlined">
-              
-                layers
-      
-            </div>
-            <div data-id="locations" class="material-symbols-outlined">
-              location_on
-            </div>
-      
-          </div>
-
-        <div id="ctrl-panel">
-            <div id="layers" class="active"></div>
-            <div id="locations"></div>
+        <div data-id="layers" class="active material-symbols-outlined">
+          
+            layers
+  
         </div>
-
+        <div data-id="locations" class="material-symbols-outlined">
+          location_on
+        </div>
+  
+      </div>
+  
+      <div id="ctrl-panel">
+        <div id="layers" class="active"></div>
+        <div id="locations"></div>
+      </div>
+  
     </div>
 
     <script type="module">
