--- a/public/css/base/_colours.css
+++ b/public/css/base/_colours.css
@@ -8,6 +8,8 @@
 
   --color-light: #ffffff;
 
+  --color-off-light: #eeeeee;
+
   --color-light-secondary: #f2f2f2;
 
   --color-light-tertiary: #fafafa;
@@ -53,7 +55,7 @@
 }
 
 .primary-background {
-  color: white;
+  color: var(--color-light);
   background-color: var(--color-primary);
 }
 
