--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -189,12 +189,15 @@ html.dark-mode {
     background-color: var(--dm-color-dark-faded);
   }
   #layers {
-    .drawer.layer-view .drawer {
-      background-color: var(--dm-color-dark-neutral);
-    }
     & > .drawer.layer-group .drawer.layer-view {
       background-color: var(--dm-color-dark-faded);
       border-top: 1px solid var(--dm-color-medium);
+    }
+    & > .layer-view > .drawer {
+      background-color: var(--dm-dark-faded);
+    }
+    .drawer.layer-view .drawer {
+      background-color: var(--dm-color-dark-neutral);
     }
   }
   .location-view-grid {
