Dark mode - single layer view background;

--- a/public/css/base/_dark_mode.css
+++ b/public/css/base/_dark_mode.css
@@ -209,7 +209,7 @@ html.dark-mode {
     }
 
     & > .layer-view > .drawer {
-      background-color: var(--dm-dark-faded);
+      background-color: var(--dm-color-dark-faded);
     }
 
     .drawer.layer-view .drawer {
