--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -194,7 +194,7 @@ html.dark-mode {
       border-top: 1px solid var(--dm-color-medium);
     }
     & > .layer-view > .drawer {
-      background-color: var(--dm-dark-faded);
+      background-color: var(--dm-color-dark-faded);
     }
     .drawer.layer-view .drawer {
       background-color: var(--dm-color-dark-neutral);
