--- a/public/css/base/_material_icons.css
+++ b/public/css/base/_material_icons.css
@@ -23,6 +23,10 @@
     color: var(--color-no);
   }
 
+  &.ok-colour {
+    color: var(--color-ok);
+  }
+
   &.primary-light-colour {
     color: var(--color-primary-light);
   }
