--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -30,6 +30,8 @@
 
 @import url('./elements/_pills.css');
 
+@import url('./elements/_radio.css');
+
 @import url('./elements/_searchbox.css');
 
 @import url('./elements/_slider.css');
