--- a/public/css/_ui.css
+++ b/public/css/_ui.css
@@ -36,6 +36,8 @@
 
 @import url('./layout/_divider.css');
 
+@import url('./layout/_cloudinary.css');
+
 @import url('./layout/_layerview.css');
 
 @import url('./layout/_locationview.css');
