Cloudinary - delete document font size;

--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1927,6 +1927,11 @@ dialog {
       border-radius: 50%;
     }
   }
+  .link-with-img {
+    .delete {
+      font-size: 1.5em;
+    }
+  }
 }
 
 /* public/css/layout/_layerview.css */
