--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1908,6 +1908,8 @@ dialog {
       margin: auto;
       text-align: center;
       color: var(----color-off-black);
+      pointer-events: none;
+      user-select: none;
       & > span {
         vertical-align: middle;
         margin: 0.2em;
