css: drag and drop zone hidden in print;

--- a/public/css/layout/_cloudinary.css
+++ b/public/css/layout/_cloudinary.css
@@ -63,3 +63,13 @@
     }
   }
 }
+
+@media print {
+  .image,
+  .images,
+  .documents {
+    .drag_and_drop_zone {
+      display: none;
+    }
+  }
+}
