--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -1935,6 +1935,15 @@ dialog {
     }
   }
 }
+@media print {
+  .image,
+  .images,
+  .documents {
+    .drag_and_drop_zone {
+      display: none;
+    }
+  }
+}
 
 /* public/css/layout/_layerview.css */
 .drawer.layer-group,
