Dark mode - added lighter background class;

--- a/public/css/base/_dark_mode.css
+++ b/public/css/base/_dark_mode.css
@@ -28,6 +28,10 @@ html.dark-mode {
     }
   }
 
+  .lighter-background {
+    background-color: var(--dm-color-dark-faded);
+  }
+
   .bg-light-tertiary {
     background-color: var(--dm-color-dark-faded);
   }
