--- a/public/css/elements/_searchbox.css
+++ b/public/css/elements/_searchbox.css
@@ -2,7 +2,7 @@
   width: 100%;
   overflow: visible;
   position: relative;
-  background-color: white;
+  background-color: var(--color-light);
   box-shadow: var(--color-mid) 0px 8px 24px;
 
   & > ul {
@@ -13,7 +13,7 @@
     box-shadow: 1px 1px 3px var(--color-primary-light);
     margin-top: -1px;
     text-align: left;
-    background-color: white;
+    background-color: var(--color-light);
     z-index: 999;
 
     & > li {
@@ -30,7 +30,8 @@
     }
 
     & .label {
-      padding: 0 6px;
+      padding: 0 2px;
+      margin-right: 2px;
       border-radius: 2px;
       color: var(--color-light);
       font-size: 80%;
