--- a/public/css/layout/_divider.css
+++ b/public/css/layout/_divider.css
@@ -4,7 +4,7 @@
   background-image: url('../../icons/pill-vertical.svg');
   background-repeat: no-repeat;
   background-position: center;
-  box-shadow: 3px 0px 6px -3px #777;
+  box-shadow: 3px 0px 6px -3px var(--color-off-black);
   z-index: 9999;
 
   &:hover {
@@ -19,8 +19,8 @@
   background-image: url('../../icons/pill-horizontal.svg');
   background-repeat: no-repeat;
   background-position: center;
-  background-color: white;
-  box-shadow: 0px -1px 6px -3px #777;
+  background-color: var(--color-light);
+  box-shadow: 0px -1px 6px -3px var(--color-off-black);
 
   &:hover {
     cursor: row-resize;
