--- a/public/css/layout/_locationview.css
+++ b/public/css/layout/_locationview.css
@@ -62,7 +62,7 @@
     & > .header {
       grid-column: 1 / 3;
       background-color: var(--color-primary);
-      color: white;
+      color: var(--color-light);
       border-radius: 3px;
       padding: 0 0.5em;
     }
