--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -194,6 +194,12 @@ html.dark-mode {
   }
   .searchbox {
     box-shadow: unset;
+    & > ul {
+      background-color: var(--dm-color-medium);
+      & li {
+        color: var(--color-light);
+      }
+    }
   }
   #ctrls-divider,
   #tabview-divider {
@@ -1315,7 +1321,7 @@ dialog.alert-confirm {
 .btn-panel {
   width: 100%;
   padding: 0.3em 0.5em;
-  background-color: white;
+  background-color: var(--color-light);
   border: 1px solid var(--color-light-secondary);
   border-radius: 3px;
   box-shadow: 1px 1px 3px var(--color-primary-light);
@@ -1339,7 +1345,7 @@ dialog.alert-confirm {
     right: 0;
     z-index: 99;
     color: black;
-    background: white;
+    background: var(--color-light);
     overflow: hidden;
     padding: 1em 1.5em;
     opacity: 0;
@@ -1692,7 +1698,7 @@ dialog {
   width: 100%;
   overflow: visible;
   position: relative;
-  background-color: white;
+  background-color: var(--color-light);
   box-shadow: var(--color-mid) 0px 8px 24px;
   & > ul {
     display: none;
@@ -1702,7 +1708,7 @@ dialog {
     box-shadow: 1px 1px 3px var(--color-primary-light);
     margin-top: -1px;
     text-align: left;
-    background-color: white;
+    background-color: var(--color-light);
     z-index: 999;
     & > li {
       padding: 5px;
@@ -1715,7 +1721,8 @@ dialog {
       background-color: var(--color-light-secondary);
     }
     & .label {
-      padding: 0 6px;
+      padding: 0 2px;
+      margin-right: 2px;
       border-radius: 2px;
       color: var(--color-light);
       font-size: 80%;
@@ -1855,7 +1862,7 @@ dialog {
   background-image: url('data:image/svg+xml,<svg viewBox="0 0 10 100" xmlns="http://www.w3.org/2000/svg">%0A  <line x1="5" y1="10" x2="5" y2="90" stroke-width="3" stroke="%23888" stroke-linecap="round"/>%0A</svg>');
   background-repeat: no-repeat;
   background-position: center;
-  box-shadow: 3px 0px 6px -3px #777;
+  box-shadow: 3px 0px 6px -3px var(--color-off-black);
   z-index: 9999;
   &:hover {
     cursor: col-resize;
@@ -1868,8 +1875,8 @@ dialog {
   background-image: url('data:image/svg+xml,<svg viewBox="0 0 100 10" xmlns="http://www.w3.org/2000/svg">%0A  <line x1="10" y1="5" x2="90" y2="5" stroke-width="3" stroke="%23888" stroke-linecap="round"/>%0A</svg>');
   background-repeat: no-repeat;
   background-position: center;
-  background-color: white;
-  box-shadow: 0px -1px 6px -3px #777;
+  background-color: var(--color-light);
+  box-shadow: 0px -1px 6px -3px var(--color-off-black);
   &:hover {
     cursor: row-resize;
   }
@@ -2060,7 +2067,7 @@ dialog {
     & > .header {
       grid-column: 1 / 3;
       background-color: var(--color-primary);
-      color: white;
+      color: var(--color-light);
       border-radius: 3px;
       padding: 0 0.5em;
     }
