--- a/public/css/base/_dark_mode.css
+++ b/public/css/base/_dark_mode.css
@@ -261,6 +261,29 @@ html.dark-mode {
 
   /* end map toolbar */
 
+  /* begin popup */
+
+  .popup {
+    background-color: var(--dm-color-medium);
+    box-shadow: unset;
+    border: solid 1px var(--dm-color-dark-faded);
+    color: var(--color-light);
+
+    & button.primary-colour {
+      color: var(--color-on);
+    }
+
+    &:after {
+      border-top-color: var(--dm-color-medium);
+    }
+
+    & li:hover {
+      background: var(--dm-color-dark-faded);
+    }
+  }
+
+  /* end popup */
+
   /* begin scrollbar */
 
   ::-webkit-scrollbar-track {
