--- a/public/css/mapp.css
+++ b/public/css/mapp.css
@@ -219,7 +219,7 @@ body {
   z-index: 998;
   margin: 0;
   padding: 5px;
-  background-color: white;
+  background-color: var(--color-light);
   opacity: 0;
   transition-property: opacity;
   transition-duration: 0.3s;
@@ -229,7 +229,7 @@ body {
 /* public/css/layout/_popup.css */
 .popup {
   position: absolute;
-  background-color: white;
+  background-color: var(--color-light);
   bottom: 12px;
   transform: translate(-50%, 0);
   &::after,
@@ -240,7 +240,7 @@ body {
     pointer-events: none;
   }
   &::after {
-    border-top-color: white;
+    border-top-color: var(--color-light);
     border-width: 10px;
     left: 50%;
     margin-left: -10px;
