--- a/public/css/ui.css
+++ b/public/css/ui.css
@@ -144,6 +144,9 @@ html.dark-mode {
   dialog {
     color: var(--dm-color-light);
     background-color: var(--dm-color-dark-faded);
+    &.alert-confirm h4 {
+      background-color: var(--color-on);
+    }
   }
   .drawer {
     background-color: var(--dm-color-dark-faded);
