--- a/public/views/_test.html
+++ b/public/views/_test.html
@@ -65,7 +65,6 @@
       }
   
       #ctrl-tabs {
-        height: auto;
         padding: 0.5em;
         width: 100%;
         display: flex;
@@ -77,7 +76,6 @@
       }
   
       #ctrl-panel {
-        height: calc(100% - 50px);
         overflow-y: auto;
       }
   
@@ -140,6 +138,8 @@
           grid-column: 1;
           height: 100%;
           overflow: hidden;
+          display: flex;
+          flex-direction: column;
         }
   
         #Tabview {
