1. Add Alt to Image for accessibility 2. Add aria-label to searchbox for accessibility 3. Removed overwride of infoj-key to ensure this goes orange when layer is active

--- a/public/views/_default.html
+++ b/public/views/_default.html
@@ -389,7 +389,7 @@
         target: document.getElementById('Map'),
         logo: mapp.utils.html.node`
         <a class="logo" target="_blank" href="https://geolytix.co.uk">
-          <img src="https://geolytix.github.io/public/geolytix_mapp.svg">`,
+          <img src="https://geolytix.github.io/public/geolytix_mapp.svg" alt="GEOLYTIX MAPP Logo">`,
         links: {
           [`XYZ v${mapp.version}`]: 'https://github.com/GEOLYTIX/xyz',
           ['SHA']: `https://github.com/GEOLYTIX/xyz/commit/${mapp.hash}`,
